[package]
name = "clokwerk"
version = "0.4.0-rc1"
authors = ["Mark Sherry <mdsherry@gmail.com>"]
documentation = "https://docs.rs/clokwerk/"
description="A simple Rust recurring task scheduler, similar to Python's schedule"
readme = "README.md"
repository = "https://github.com/mdsherry/clokwerk"
keywords = ["scheduler", "job"]
categories = ["date-and-time"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["clock"], default-features = false }

[dev-dependencies]
once_cell = "1.2"
tokio = { version="1.5", features=["rt", "time"]}
async-std = "1.9"
tokio-test = "0.4"

[features]
default = ["async"]
async = []
